plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'com.avast.gradle.docker-compose' version '0.17.6'
}

group = 'com.solacecare'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.postgresql:postgresql:42.6.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

javafx {
    version = '17'
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

dockerCompose {
    useComposeFiles = ['docker-compose.yml']
    removeVolumes = false
    isRequiredBy(tasks.bootRun)
}

tasks.named('test') {
    useJUnitPlatform()
}